--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "lucide-react": "^0.475.0",
     "my-app": "file:",
     "next": "15.1.6",
     "react": "^19.0.0",
